--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ body {
     transform: translateY(2px); /*faz um efeito de jogar o botao 2px p baixo, parece que esta sendo apertado */
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width:401),(max-width: 600px) {
     
     .calculadora {
         width: 90%;
@@ -70,6 +70,20 @@ body {
         margin: 0.1em;
         width: 1.5em;
     }
+}
 
-    
+@media only screen and (max-width: 400px) {
+    .calculadora {
+        width: 90%;
+        height: 70%;
+        margin: 4%;
+        margin-top: 30%;
+    }
+
+    .botao {
+        height: 1.5em;
+        margin: 0.2em;
+        width: 1.1em;
+    }
+
 }
