--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,18 @@ body {
 }
 
 .calculadora {
-    width: 34%;
+    width: 500px;
     height: 80%;
     background-color: #FF8080;
-    margin-left: 30%;
     margin-top: 6%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
 }
 
 .visor {
-    width: 99%;
-    height: 20%;
+    width: 495px;
+    height: 130px;
     border-radius: 7px;
     font-size: 60px;
     text-align: right;
@@ -30,9 +31,9 @@ body {
 }
 
 .botao {
-    height: 2em;
-    margin: 0.1em;
-    width: 2em;
+    height: 100px;
+    margin: 7px;
+    width: 100px;
     font-size: 50px;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
@@ -47,8 +48,8 @@ body {
 @media only screen and (min-width:401),(max-width: 600px) {
     
     .calculadora {
-        width: 90%;
-        height: 60%;
+        width: 350px;
+        height: 400px;
         margin: 4%;
         margin-top: 30%;
     }
@@ -61,29 +62,30 @@ body {
 
     .botoes {
         width: 100%;
-        height: 80%;
+        height: 100%;
         margin: 0.5em;
     }
 
     .botao {
-        height: 2em;
-        margin: 0.1em;
-        width: 1.5em;
+        height: 70px;
+        margin: 5px;
+        width: 70px;
     }
 }
 
 @media only screen and (max-width: 400px) {
     .calculadora {
-        width: 90%;
-        height: 70%;
+        width: 250px;
+        height: 300px;
         margin: 4%;
         margin-top: 30%;
     }
 
     .botao {
-        height: 1.5em;
-        margin: 0.2em;
-        width: 1.1em;
+        height: 55px;
+        margin: 2.5px;
+        width: 50px;
+        font-size: 40px;
     }
 
 }
